5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1595_2895.log
== TEST (2019-06-11 16:17:18) 
-- CODE:
j = input("qual a quantidade?")
vu = input("valor unitario?")
frete = input("frete?")

print(j+vu+frete)
-- OUTPUT:
1245.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:17:38) 
-- CODE:
j = input("qual a quantidade?")
vu = input("valor unitario?")
frete = input("frete?")

print(j+vu+frete)
-- EXECUTION TIME:
0.794404
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1245.078.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1067.095.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
246975.0321.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:17:55) 
-- CODE:
j = input("qual a quantidade?")
vu = input("valor unitario?")
frete = input("frete?")

print(j*vu+frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(j*vu+frete)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:18:47) 
-- CODE:
j = input("qual a quantidade?")
vu = float(input("valor unitario?")
frete = input("frete?")

print(j*vu+frete)
-- ERROR:
File "XXXX", line 3
    frete = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:19:03) 
-- CODE:
j = input("qual a quantidade?")
vu = (input("valor unitario?")
frete = input("frete?")

print(j*vu+frete)
-- ERROR:
File "XXXX", line 3
    frete = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:19:24) 
-- CODE:
j = input("qual a quantidade?")
vu = (input("valor unitario?")
frete = input("qual o valor do frete?")

print(j*vu+frete)
-- ERROR:
File "XXXX", line 3
    frete = input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:19:52) 
-- CODE:
j = input("qual a quantidade?")
vu = (input("valor unitario?")
f = input("qual o valor do frete?")

print(j*vu+f)
-- ERROR:
File "XXXX", line 3
    f = input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:20:22) 
-- CODE:
j = input("qual a quantidade?")
vu = (input("valor unitario?")
f = input("qual o valor do frete?")

print(j*vu+f)
-- ERROR:
File "XXXX", line 3
    f = input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:20:31) 
-- CODE:
j = input("qual a quantidade?")
vu = (input("valor unitario?")


print(j*vu+f)
-- ERROR:
File "XXXX", line 5
    print(j*vu+f)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:20:41) 
-- CODE:
j = input("qual a quantidade?")
vu = (input("valor unitario?")

print(j*vu)
-- ERROR:
File "XXXX", line 4
    print(j*vu)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:21:49) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = input("qual o valor unitario do jogo? ")
frete = input("qual o frete?")
-- ERROR:
File "XXXX", line 4
    print(j*vu)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:22:43) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = input("qual o valor unitario do jogo? ")
frete = input("qual o frete?")
total = q * vu + frete
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = q * vu + frete
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:22:54) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = input("qual o valor unitario do jogo? ")
frete = input("qual o frete?")
total = q * vu + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = q * vu + frete
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:23:23) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = input("qual o valor unitario do jogo? ")
frete = input("qual o frete?")
total = q + vu + frete
print(total)
-- OUTPUT:
1245.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:38:39) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = input("qual o valor unitario do jogo? ")
frete = input("qual o frete?")
total = q + vu + frete
print(total)
-- OUTPUT:
1245.078.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:41:06) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:42:04) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(total)
-- EXECUTION TIME:
0.89774
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:11) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:56:48) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = float(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = q * vu + frete
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:24) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(total, round, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:06:01) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(round,total, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:53) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:24:48) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:17) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:25:55) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input("qual o frete?")
total = q * vu + frete
print(total, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:26:38) 
-- CODE:
q = input("qual a quantidade de jogos? ")
vu = int(input("qual o valor unitario do jogo? "))
frete = input(" qual o frete?")
total = (q * vu) + frete
print(total, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:28:19) 
-- CODE:
q = int(input("qual a quantidade de jogos? "))
vu = int(input("qual o valor unitario do jogo? "))
frete = int(input(" qual o frete? "))
total = (q * vu) + frete
print(total, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:28:36) 
-- CODE:
q = int(input("qual a quantidade de jogos? "))
vu = int(input("qual o valor unitario do jogo? "))
frete = int(input(" qual o frete? "))
total = (q * vu) + frete
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:28:48) 
-- CODE:
q = int(input("qual a quantidade de jogos? "))
vu = int(input("qual o valor unitario do jogo? "))
frete = int(input(" qual o frete? "))
total = (q * vu) + frete
print(round(total, 2))
-- EXECUTION TIME:
0.717166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:29:04) 
-- CODE:
q = int(input("qual a quantidade de jogos? "))
vu = int(input("qual o valor unitario do jogo? "))
frete = int(input(" qual o frete? "))
total = q * vu + frete
print(round(total, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vu = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:29:41) 
-- CODE:
q = float(input("qual a quantidade de jogos? "))
vu = float(input("qual o valor unitario do jogo? "))
frete = float(input(" qual o frete? "))
total = q * vu + frete
print(round(total, 2))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:29:56) 
-- CODE:
q = float(input("qual a quantidade de jogos? "))
vu = float(input("qual o valor unitario do jogo? "))
frete = float(input(" qual o frete? "))
total = q * vu + frete
print(round(total, 2))
-- EXECUTION TIME:
0.687328
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
